@@ -100,7 +100,8 @@ test_replay()
   auto t = task_load(task_behaviour);
   if (t) {
     task_manager.Commit(*t);
-    task_manager.Resume();
+    if (!task_manager.Resume())
+      return false;
   } else {
     return false;
   }
